# planktom12_scripts

./: .gitignore  README.md  analyse.job  clean_restart.sh  compress_nc.job  compress_nc.sh  compute_amoc.sh  create_restart.py  dgom_v2  nemo.job  nemo5.job  nemo5_compute.job  nemo_compute.job  pyproject.toml  rebuild_restart.sh  rstar_zoo.py  setUpRun.sh  setup_restarts.sh  setup_restarts_RY.sh  setup_spin.sh  test_error_handling.py  tidyup.job  tidyup.sh  tidyupJob  tidyupJob.old  update_timestep.sh
analyser/: analyser.py  analyser_config.py  analyser_config.toml  analyser_config_nemo3.6.toml  analyser_config_nemo5.0.toml  analyser_functions.py  analyser_io.py  analyser_processor.py  benchmark.py  test_column_names.py
breakdown/: OUTPUT_FORMAT_GUIDE.md  REFACTORING_SUMMARY.md  breakdown.py  breakdown_config.py  breakdown_config.toml  breakdown_dashboard  breakdown_functions.py  breakdown_io.py  breakdown_legacy.py  breakdown_migration.py  breakdown_parms  breakdown_processor.py  test_column_names.py
docs/: namelist_notes.md
monitor/: annualMaps.sh  createHTML.sh  maps.jnl  mapsPFT.jnl  monitor.py  monitor.py.original  monthly.py  template.html  verticalDepth.bak.py  verticalDepth.py
shared/: __init__.py  amoc.py  aou.py  carbon.py  rls.py
visualise/: COLORMAPS_AND_VARIABLES.md  PYTHON_MAPS_README.md  SUMMARY.md  annualMaps.sh  annualMaps_python.sh  config_utils.py  createHTML.sh  custom.css  difference_utils.py  extract_setupdata.py  logging_utils.py  make_html.sh  make_maps.py  make_monthly_plots.py  make_scorecard.py  make_timeseries.py  make_transects.py  make_transects_physics.py  make_vertical_profiles.py  map_utils.py  mapsDiff.jnl  monthly.py  nemo_files.py  ocean_maps.py  preprocess_data.py  python_maps.py  template.qmd  timeseries_util.py  transect_utils.py  verticalDepth.py  visualise.py  visualise_config.toml  visualise_config_nemo3.6.toml  visualise_config_nemo5.0.toml  visualise_model.py
visualise/multimodel/: README_MIGRATION.md  breakdown.py  breakdown_observations.py  calculate_variable_correlation.py  compare_namelists.py  compare_setupdata.py  correlation_map.job  createMultimodelHTML.sh  custom.scss  generate_multimodel_html.py  make_difference_maps.py  make_multimodel_html.sh  make_multimodel_maps.py  make_multimodel_timeseries.py  make_multimodel_transects.py  make_npp_change_maps.py  make_variable_change_maps.py  modelsToPlot.csv.example  multimodel.py  multimodel.sh  multimodel_maps.py  multimodel_transects.py  preprocess_multimodel.py  template_multimodel.qmd  visualise_multimodel.py
visualise/multimodel/templates/: multimodel.html
